--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.5.2",
+    "@headlessui/react": "^2.0.4",
     "framer-motion": "^11.2.10",
     "mdb-react-ui-kit": "^8.0.0",
     "prop-types": "^15.8.1",
