fixed svg load issue in vercel.json

--- a/client/vercel.json
+++ b/client/vercel.json
@@ -1,5 +1,10 @@
 {
     "rewrites": [
         {"source": "/(.*)", "destination": "/"}
-    ]
+    ],
+    "images": {
+        "dangerouslyAllowSVG": true,
+        "contentSecurityPolicy": "script-src 'none'; frame-src 'none'; sandbox;",
+        "contentDispositionType": "inline"
+    }
 }
