--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.5.2",
     "@headlessui/react": "^2.0.4",
+    "@sanity/client": "^6.20.1",
     "blurhash": "^2.0.5",
     "framer-motion": "^11.2.10",
     "mdb-react-ui-kit": "^8.0.0",
