--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "react": "^18.2.0",
     "react-blurhash": "^0.3.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.52.0",
     "react-icons": "^5.2.1",
     "react-responsive": "^10.0.0",
     "react-router-dom": "^6.23.1",
