--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@headlessui/react": "^2.0.4",
     "@sanity/client": "^6.20.1",
+    "axios": "^1.7.2",
     "blurhash": "^2.0.5",
     "framer-motion": "^11.2.10",
     "mdb-react-ui-kit": "^8.0.0",
