--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "@sanity/client": "^6.20.1",
     "axios": "^1.7.2",
     "blurhash": "^2.0.5",
+    "date-fns": "^3.6.0",
     "framer-motion": "^11.2.10",
     "mdb-react-ui-kit": "^8.0.0",
     "prop-types": "^15.8.1",
