--- a/client/package.json
+++ b/client/package.json
@@ -46,6 +46,7 @@
     "eslint-plugin-react-refresh": "^0.4.6",
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.3",
-    "vite": "^5.3.1"
+    "vite": "^5.3.1",
+    "vite-plugin-imagemin": "^0.6.1"
   }
 }
