--- a/client/package.json
+++ b/client/package.json
@@ -25,7 +25,7 @@
     "react": "^18.2.0",
     "react-blurhash": "^0.3.0",
     "react-dom": "^18.2.0",
-    "react-ga": "^3.3.1",
+    "react-ga4": "^2.1.0",
     "react-hook-form": "^7.52.0",
     "react-icons": "^5.2.1",
     "react-responsive": "^10.0.0",
