--- a/client/package.json
+++ b/client/package.json
@@ -28,6 +28,7 @@
     "react-ga4": "^2.1.0",
     "react-hook-form": "^7.52.0",
     "react-icons": "^5.2.1",
+    "react-infinite-logo-slider": "^1.0.13",
     "react-responsive": "^10.0.0",
     "react-router-dom": "^6.23.1",
     "react-slick": "^0.30.2",
