--- a/client/package.json
+++ b/client/package.json
@@ -15,7 +15,8 @@
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@headlessui/react": "^2.0.4",
-    "@sanity/client": "^6.20.1",
+    "@sanity/client": "^6.29.1",
+    "@sanity/image-url": "^1.1.0",
     "axios": "^1.7.2",
     "blurhash": "^2.0.5",
     "date-fns": "^3.6.0",
